--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,27 +5,32 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/padding_parent"
-    tools:context=".MainActivity">
+    tools:context=".features.alarm.presentation.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/toolbar"
+        android:id="@+id/appBar"
+        style="@style/Toolbar"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:fitsSystemWindows="true">
+        android:layout_height="100dp"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp">
-            <!-- android:fitsSystemWindows="true"
-                 app:layout_scrollFlags="scroll|enterAlwaysCollapsed" -->
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:collapsedTitleTextAppearance="@style/CollapsedTitleStyle"
+            app:expandedTitleTextAppearance="@style/ExpandedTitleStyle"
+            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
+
             <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:layout_collapseMode="pin"
                 app:menu="@menu/menu_toolbar"
                 app:subtitle="@string/time_until_next_alarm"
-                app:title="@string/App_bar_layout_tittle" />
-            <!--app:layout_collapseMode="pin"-->
+                app:title="@string/App_bar_layout_tittle"
+                app:titleCentered="true" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -33,9 +38,22 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="0dp"
+        android:id="@+id/alarmRecyclerView"
+        style="@style/Container"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        android:padding="@dimen/padding_parent"
 
+
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
+        app:layout_constraintTop_toBottomOf="@+id/appBar" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navigation_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/main_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
