--- a/app/src/main/res/layout/view_alarm_item.xml
+++ b/app/src/main/res/layout/view_alarm_item.xml
@@ -2,31 +2,34 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/margin_half"
+    android:layout_marginBottom="@dimen/margin_half">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_half"
-        android:layout_marginBottom="@dimen/margin_half">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            style="@style/CardViewStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="@dimen/padding_parent">
 
             <TextView
                 android:id="@+id/alarmTitle"
+                style="@style/CardViewTitleStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/App_bar_layout_tittle" />
+                android:text="@string/alarm_title" />
 
             <TextView
                 android:id="@+id/alarmDescription"
+                style="@style/CardViewSubtitleStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_half"
-                android:text="@string/App_bar_layout_tittle"
+                android:text="@string/alarm_description"
                 app:layout_constraintTop_toBottomOf="@+id/alarmTitle" />
 
             <com.google.android.material.switchmaterial.SwitchMaterial
