--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/more"
+        android:id="@+id/edit"
         android:icon="@drawable/round_more_vert_24"
-        android:title="@string/more" />
+        android:title="@string/edit" />
+
+    <item
+        android:id="@+id/settings"
+        android:icon="@drawable/round_more_vert_24"
+        android:title="@string/settings" />
 </menu>
