--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,26 +11,26 @@
         android:id="@+id/appBar"
         style="@style/Toolbar"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbar"
+            style="?attr/collapsingToolbarLayoutLargeStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
+            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
             app:collapsedTitleTextAppearance="@style/CollapsedTitleStyle"
-            app:expandedTitleTextAppearance="@style/ExpandedTitleStyle"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
+            app:expandedTitleTextAppearance="@style/ExpandedTitleStyle">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_collapseMode="pin"
+                android:layout_height="?attr/actionBarSize"
+                android:elevation="0dp"
                 app:menu="@menu/menu_toolbar"
                 app:subtitle="@string/time_until_next_alarm"
-                app:title="@string/App_bar_layout_tittle"
-                app:titleCentered="true" />
+                app:title="@string/App_bar_layout_tittle" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -43,16 +43,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="@dimen/padding_parent"
-
-
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
         app:layout_constraintTop_toBottomOf="@+id/appBar" />
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/main_menu" />
 
