--- a/app/src/main/res/layout/view_alarm_item.xml
+++ b/app/src/main/res/layout/view_alarm_item.xml
@@ -7,6 +7,7 @@
     android:layout_marginBottom="@dimen/margin_half">
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -24,12 +25,23 @@
                 android:text="@string/alarm_title" />
 
             <TextView
-                android:id="@+id/alarmDescription"
+                android:id="@+id/alarmTimeItSounds"
                 style="@style/CardViewSubtitleStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_half"
+                android:text="@string/alarm_time_it_sounds"
+                app:layout_constraintTop_toBottomOf="@+id/alarmTitle" />
+
+            <TextView
+                android:id="@+id/alarmDescription"
+                style="@style/CardViewSubtitleStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_half"
+                android:layout_marginTop="@dimen/margin_half"
                 android:text="@string/alarm_description"
+                app:layout_constraintStart_toEndOf="@+id/alarmTimeItSounds"
                 app:layout_constraintTop_toBottomOf="@+id/alarmTitle" />
 
             <com.google.android.material.switchmaterial.SwitchMaterial
